<resources>
    <string name="app_name">Profile App : Agus Awaludin</string>
    <string name="nama">Nama : Agus Awaludin</string>
    <string name="kelas">Kelas : IF-2</string>
    <string name="nim">Nim : 10118067</string>
    <string name="jeniskelamin">Jenis Kelamin : Laki-laki</string>
    <string name="ttl">Tempat Tanggal Lahir : Bandung - 25 Agustus 2000</string>
    <string name="alamat">Alamat : Jl.Nagrog III No.33</string>
    <string name="goldar">Golongan Darah : B</string>
    <string name="makanan">Makanan Kesukaan : Kebab</string>
    <string name="minuman">Minuman Kesukaan : Capucino</string>
    <string name="Hobi">Hobi : Nonton</string>
    <string name="lagu">Lagu Fav : Yorushika-Nautilus</string>
    <string name="film">Film Fav : NGNL Movie</string>
    <string name="pekerjaan">Pekerjaan yang diinginkan : Designer programmer</string>

    <string name="test">test</string>
</resources>